--- a/header.html
+++ b/header.html
@@ -1,18 +1,46 @@
 <header class="sticky top-0 z-50 bg-black/80 backdrop-blur-lg border-b border-yellow-500 shadow-md">
-    <div class="max-w-6xl mx-auto flex justify-between items-center px-4 py-3">
-        <div class="flex items-center space-x-3">
-            <img src="assets/images/logo.png" alt="Swastik Logo" class="h-12 w-12" />
-            <h1
-                class="text-2xl font-bold bg-gradient-to-r from-yellow-300 via-yellow-500 to-yellow-300 bg-clip-text text-transparent">
-                SWASTIK SOLUTIONS PVT. LTD.
-            </h1>
-        </div>
-        <nav class="space-x-6 text-gray-300 text-sm font-medium">
-            <a href="index.html" class="hover:text-yellow-400 transition">Home</a>
-            <a href="services.html" class="hover:text-yellow-400 transition">Services</a>
-            <a href="portfolio.html" class="hover:text-yellow-400 transition">Portfolio</a>
-            <a href="about.html" class="hover:text-yellow-400 transition">About</a>
-            <a href="contact.html" class="hover:text-yellow-400 transition">Contact</a>
-        </nav>
+  <div class="max-w-6xl mx-auto flex justify-between items-center px-4 py-3">
+    <!-- Logo & Title -->
+    <div class="flex items-center space-x-3">
+      <img src="assets/images/logo.png" alt="Swastik Logo" class="h-12 w-12" />
+      <h1 class="text-lg sm:text-xl md:text-2xl font-bold bg-gradient-to-r from-yellow-300 via-yellow-500 to-yellow-300 bg-clip-text text-transparent">
+        SWASTIK SOLUTIONS PVT. LTD.
+      </h1>
     </div>
+
+    <!-- Hamburger Button (Mobile only) -->
+    <button id="menu-toggle" class="text-yellow-400 md:hidden focus:outline-none">
+      <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+      </svg>
+    </button>
+
+    <!-- Navigation Links -->
+    <nav id="menu" class="hidden md:flex space-x-6 text-gray-300 text-sm font-medium">
+      <a href="index.html" class="hover:text-yellow-400 transition">Home</a>
+      <a href="services.html" class="hover:text-yellow-400 transition">Services</a>
+      <a href="portfolio.html" class="hover:text-yellow-400 transition">Portfolio</a>
+      <a href="about.html" class="hover:text-yellow-400 transition">About</a>
+      <a href="contact.html" class="hover:text-yellow-400 transition">Contact</a>
+    </nav>
+  </div>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu" class="md:hidden hidden px-4 pb-4 space-y-2 text-gray-300 text-sm font-medium">
+    <a href="index.html" class="block hover:text-yellow-400">Home</a>
+    <a href="services.html" class="block hover:text-yellow-400">Services</a>
+    <a href="portfolio.html" class="block hover:text-yellow-400">Portfolio</a>
+    <a href="about.html" class="block hover:text-yellow-400">About</a>
+    <a href="contact.html" class="block hover:text-yellow-400">Contact</a>
+  </div>
 </header>
+
+
+<script>
+  const toggle = document.getElementById('menu-toggle');
+  const mobileMenu = document.getElementById('mobile-menu');
+
+  toggle.addEventListener('click', () => {
+    mobileMenu.classList.toggle('hidden');
+  });
+</script>
